# script_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  justfile  sm
cmd/s/: main.go
cmd/sm/: auth.go  delete.go  edit.go  gists.go  list.go  main.go  publish.go  rename.go  root.go  unpublish.go  viper.go
cmd/smctl/: auth.go  gists.go  main.go  publish.go  root.go  unpublish.go
internal/edit/: edit.go
internal/github_connection/: auth.go  gists.go
internal/scriptDB/: convert.go  database.go  find.go  list.go  misc.go
internal/script_db/: misc.go  script_db.go
internal/smgithub/: auth.go  gists.go
src/: lib.rs
src/script_db/: default_script.sh  mod.rs  script_db_v1.rs
